Update Korean translations

--- a/util/src/main/i18n/translations/map_ko_KR.properties
+++ b/util/src/main/i18n/translations/map_ko_KR.properties
@@ -115,6 +115,10 @@ pool.matching = 이미 {0}이(가) 현재 맵 풀(Map Pool)입니다
 
 pool.mapPoolsDisabled = 맵 풀(Map pools)이 현재 비활성화되었습니다
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 vote.noVote = 현재 진행되는 투표가 없습니다
 
 vote.title.map = 맵 투표
