--- a/util/src/main/i18n/translations/map_nl_NL.properties
+++ b/util/src/main/i18n/translations/map_nl_NL.properties
@@ -85,6 +85,10 @@ map.protectPortal = Je mag dit gebied niet blokkeren
 # {0} = map pool name (e.g. "Mega")
 
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 
 
 
