Update Norwegian translations

--- a/util/src/main/i18n/translations/map_no_NO.properties
+++ b/util/src/main/i18n/translations/map_no_NO.properties
@@ -115,6 +115,10 @@ pool.matching = {0} er allerede den aktive banesamlingen
 
 pool.mapPoolsDisabled = Banesamlinger er for øyeblikket deaktivert
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 vote.noVote = Det er ingenting å stemme på akkurat nå
 
 vote.title.map = Valg av bane
