Update Polish translations

--- a/util/src/main/i18n/translations/map_pl_PL.properties
+++ b/util/src/main/i18n/translations/map_pl_PL.properties
@@ -91,6 +91,10 @@ map.protectPortal = Nie możesz blokować tej okolicy
 
 pool.mapPoolsDisabled = Baseny map są obecnie wyłączone
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 
 
 
