Update Russian translations

--- a/util/src/main/i18n/translations/map_ru_RU.properties
+++ b/util/src/main/i18n/translations/map_ru_RU.properties
@@ -115,6 +115,13 @@ pool.matching = {0} уже является текущим пулом карт
 
 pool.mapPoolsDisabled = Пулы карт в настоящее время отключены
 
+# {0} = map pool name (e.g. "Nano")
+pool.locked = Текущий пул карт ({0}) заблокирован
+
+pool.locked.button = Разблокировать
+
+pool.locked.hover = Нажмите, чтобы разблокировать пул
+
 vote.noVote = На данный момент не за что голосовать
 
 vote.title.map = Голосование
