Update Swedish translations

--- a/util/src/main/i18n/translations/map_sv_SE.properties
+++ b/util/src/main/i18n/translations/map_sv_SE.properties
@@ -115,6 +115,10 @@ pool.matching = {0} är redan den aktuella kartbanken
 
 pool.mapPoolsDisabled = Kartpooler är för närvarande inaktiverade
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 vote.noVote = Det finns inget att rösta för just nu
 
 vote.title.map = Kartröstning
