Update Galician translations

--- a/util/src/main/i18n/translations/map_gl_ES.properties
+++ b/util/src/main/i18n/translations/map_gl_ES.properties
@@ -85,6 +85,10 @@ map.protectPortal = Non debes obstruir este área
 # {0} = map pool name (e.g. "Mega")
 
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 
 
 
