--- a/util/src/main/i18n/translations/map_pt_BR.properties
+++ b/util/src/main/i18n/translations/map_pt_BR.properties
@@ -85,6 +85,10 @@ map.protectPortal = Você não pode obstruir esta área
 # {0} = map pool name (e.g. "Mega")
 
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 
 
 
