--- a/util/src/main/i18n/translations/map_es_CL.properties
+++ b/util/src/main/i18n/translations/map_es_CL.properties
@@ -115,6 +115,10 @@ pool.matching = {0} ya está en la pool de mapas actual
 
 pool.mapPoolsDisabled = Las pools de mapas están deshabilitadas
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 vote.noVote = No hay votaciones en curso
 
 vote.title.map = Votación de mapas
