Update Thai translations

--- a/util/src/main/i18n/translations/map_th_TH.properties
+++ b/util/src/main/i18n/translations/map_th_TH.properties
@@ -85,6 +85,10 @@ map.protectPortal = คุณไม่สามารถสร้างสิ่
 # {0} = map pool name (e.g. "Mega")
 
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 
 
 
