Update Malay translations

--- a/util/src/main/i18n/translations/map_ms_MY.properties
+++ b/util/src/main/i18n/translations/map_ms_MY.properties
@@ -83,6 +83,10 @@ map.protectPortal = Anda tidak boleh menghalang kawasan ini
 # {0} = map pool name (e.g. "Mega")
 
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 
 
 
