Update English, United Kingdom translations

--- a/util/src/main/i18n/translations/map_en_GB.properties
+++ b/util/src/main/i18n/translations/map_en_GB.properties
@@ -115,6 +115,10 @@ pool.matching = {0} is already the current map pool
 
 pool.mapPoolsDisabled = Map pools are currently disabled
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 vote.noVote = There is nothing to vote for right now
 
 vote.title.map = Map Vote
