--- a/util/src/main/i18n/translations/map_en_PT.properties
+++ b/util/src/main/i18n/translations/map_en_PT.properties
@@ -82,6 +82,10 @@ map.protectPortal = Ye can't be blockin' this off laddy
 # {0} = map pool name (e.g. "Mega")
 
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 
 
 
