Update LOLCAT translations

--- a/util/src/main/i18n/translations/map_lol_US.properties
+++ b/util/src/main/i18n/translations/map_lol_US.properties
@@ -115,6 +115,10 @@ pool.matching = {0} iz alrdy the currnt map poolz
 
 pool.mapPoolsDisabled = Mawp poolz ar currnly disabld
 
+# {0} = map pool name (e.g. "Nano")
+
+
+
 vote.noVote = Nuthin to voet 4 naw, come back latr
 
 vote.title.map = Map voet
