Update Catalan translations

--- a/util/src/main/i18n/translations/match_ca_ES.properties
+++ b/util/src/main/i18n/translations/match_ca_ES.properties
@@ -1,6 +1,8 @@
 match.title = Partida
 
+match.name = partida
 
+match.name.plural = partides
 
 match.info.time = Temps
 
@@ -10,16 +12,21 @@ match.info.players = Jugadors
 
 match.info.observers = Observadors
 
+match.info.score = Marcador
 
+match.info.you = Tu
 # {0} = team name
 match.balanceTeams = S''equilibraran els equips automàticament si la repartició de jugadors roman a favor de {0}
 
+match.maxBuildHeight = Heu assolit l'alçada màxima de construcció
 
 match.outOfBounds = No pots abandonar el terreny de joc
 
 match.laneExit = Has abandonat la teva zona
 
+match.disabled.enderChest = Cofres d'Ender estan desactivats
 
+match.disabled.bed = Els llits estan desactivats
 
 match.class.title = Classes
 
@@ -42,55 +49,74 @@ match.class.notFound = Cap classe coincideix amb la descripció.
 # {1} = number of consecutive kills
 # {2} = number of deaths
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
+match.stats = Baixes\: {0} | Baixes consecutives\: {1} | Morts\: {2} | K/D\: {3}
 
 # {0} = number of kills
 # {1} = number of deaths
 # {2} = numbers of kills divided by the number of deaths (kill-death ratio)
+match.stats.concise = Assassinats\: {0}  Morts\: {1}  K/D\: {2}
 
 # {0} = number of kills
 # {1} = number of consecutive kills
 # {2} = number of deaths
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
 # {4} = an amount of damage
+match.stats.own = Les teves estadístiques\: {0} Assassinats ({1}), {2} Morts, {3} K/D, {4} Mal
 
 # {0} = a player name
 # {1} = an amount of kills(number)
+match.stats.kills = Morts\: {1} per {0}
 
 # {0} = a player name
 # {1} = a killstreak(number)
+match.stats.killstreak = Baixes consecutives\: {1} per {0}
 
 # {0} = a killstreak(number)
+match.stats.killstreak.concise = Millor ratxa consecutiva\: {0}
 
 # {0} = a player name
 # {1} = an amount of deaths(number)
+match.stats.deaths = Morts\: {1} per {0}
 
 # {0} = a player name
 # {1} = an amount of blocks
+match.stats.bowshot = Tir més llarg\: {1} blocs de {0}
 
 # {0} = a player name
 # {1} = an amount of damage
+match.stats.damage = Mal\: {1} per {0}
 
 # {0} = an amount of damage
 # {1} = an amount of damage
+match.stats.damage.dealt = Danys causats (arc)\: {0} ({1})
 
 # {0} = an amount of damage
 # {1} = an amount of damage
+match.stats.damage.received = Danys causats (arc)\: {0} ({1})
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
 # {2} = accuracy represented as a percentage
+match.stats.bow = Cops d''arc\: {0} / {1} ({2})
 
 
 # {0} = the number of flags captured
+match.stats.flagsCaptured.concise = Banderes capturades\: {0}
 
 # {0} = a number representing the duration of the capture
+match.stats.flaghold.concise = Retenció de bandera més llarga\: {0}
 
 # {0} the amount of monument pieces broken(number)
+match.stats.broken.concise = Blocs de monument trencats\: {0}
 
 # {0} = a player name
+match.stats.team = Estadístiques de {0}
 
+match.stats.title = Estadístiques de la partida
 
+match.stats.you = Les vostres estadístiques
 
+match.stats.disabled = Heu desactivat les estadístiques de la partida
 
 # {0} = team name (e.g. "Red Team")
 match.myTeam = Estàs a {0}
@@ -110,9 +136,11 @@ match.alias.err = L''equip amb el nom {0} ja existeix.
 
 # {0} = team name (e.g. "Green Team")
 # {1} = max number of players
+match.resize.max = {0} ara té una mida màxima de {1} jugadors
 
 # {0} = team name (e.g. "Green Team")
 # {1} = min number of players
+match.resize.min = {0} ara té una mida mínima de {1} jugadors
 
 # {0} = duration in colon format (e.g. "13:37" for 13 minutes and 37 seconds left)
 match.timeLimit.generic = La partida acaba en {0}
@@ -125,6 +153,7 @@ match.timeLimit.result = {1} després de la {0}
 # {1} = some criteria to win the match
 match.timeLimit.commandOutput = El límit de temps és {0} i sortirà el resultat basat en {1}
 
+match.error.noMatch = No hi ha cap partida en curs en aquest moment
 
 broadcast.go = Ja\!
 
@@ -132,6 +161,8 @@ broadcast.matchStart = La partida ha començat\!
 
 broadcast.startCancel = Començament de la partida cancel·lat
 
+broadcast.overtime = S'ha sobrepassat el temps\! El temporitzador s’iniciarà després de trencar l’empat
+broadcast.overtime.limit = Si no hi ha guanyador després de {0}, la partida quedarà empatada.
 
 broadcast.gameOver = Fi del joc\!
 
@@ -182,4 +213,5 @@ admin.start.unknownState = La partida no s'ha pogut començar en aquest moment.
 
 admin.end.unknownError = La partida no ha pogut ser acabada en aquest moment.
 
+admin.setPool.activeCycle = No podeu canviar el llistat de mapes, mentre està canviant.
 
