Update German translations

--- a/util/src/main/i18n/translations/match_de_DE.properties
+++ b/util/src/main/i18n/translations/match_de_DE.properties
@@ -16,7 +16,7 @@ match.info.score = Punktestand
 
 match.info.you = Du
 # {0} = team name
-match.balanceTeams = Die Teams werden automatisch ausgeglichen, wenn {0} weiterhin zu viele Spieler hat
+match.balanceTeams = Die Teams werden automatisch ausgeglichen, falls {0} weiterhin zu viele Spieler hat
 
 match.maxBuildHeight = Du hast die maximale Bauhöhe erreicht
 
@@ -153,6 +153,7 @@ match.timeLimit.result = {1} nach {0}
 # {1} = some criteria to win the match
 match.timeLimit.commandOutput = Das Zeit-Limit ist {0} mit dem Ergebnis {1}
 
+match.error.noMatch = Zurzeit läuft kein Spiel
 
 broadcast.go = Los\!
 
