Update Italian translations

--- a/util/src/main/i18n/translations/match_it_IT.properties
+++ b/util/src/main/i18n/translations/match_it_IT.properties
@@ -92,6 +92,7 @@ match.stats.damage.dealt = Danno (Arco)\: {0} ({1})
 
 # {0} = an amount of damage
 # {1} = an amount of damage
+match.stats.damage.received = Danno Ricevuto (Arco)\: {0} ({1})
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
@@ -152,6 +153,7 @@ match.timeLimit.result = {1} dopo {0}
 # {1} = some criteria to win the match
 match.timeLimit.commandOutput = il limite di tempo è {0} con risultato {1}
 
+match.error.noMatch = Al momento non ci sono partite in corso
 
 broadcast.go = Vai\!
 
