Update Norwegian translations

--- a/util/src/main/i18n/translations/match_no_NO.properties
+++ b/util/src/main/i18n/translations/match_no_NO.properties
@@ -1,8 +1,8 @@
-match.title = Kamp
+match.title = Match
 
-match.name = kamp
+match.name = match
 
-match.name.plural = kamper
+match.name.plural = matcher
 
 match.info.time = Tid
 
@@ -43,7 +43,7 @@ match.class.sticky = Du kan ikke endre klasse fordi gjeldende klasse er klebrig.
 
 match.class.notEnabled = Klasser er ikke aktivert på dette kartet.
 
-match.class.notFound = Ingen klasse passet spørringen.
+match.class.notFound = Ingen klasse passet søket.
 
 # {0} = number of kills
 # {1} = number of consecutive kills
