--- a/util/src/main/i18n/translations/match_es_MX.properties
+++ b/util/src/main/i18n/translations/match_es_MX.properties
@@ -92,6 +92,7 @@ match.stats.damage.dealt = Daño infligido (Arco)\: {0} ({1})
 
 # {0} = an amount of damage
 # {1} = an amount of damage
+match.stats.damage.received = Daño recibido (Arco)\: {0} ({1})
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
@@ -152,6 +153,7 @@ match.timeLimit.result = {1} después de {0}
 # {1} = some criteria to win the match
 match.timeLimit.commandOutput = El tiempo límite es {0} con el resultado {1}
 
+match.error.noMatch = No hay partidas en curso en este momento
 
 broadcast.go = ¡Ya\!
 
