Update LOLCAT translations

--- a/util/src/main/i18n/translations/match_lol_US.properties
+++ b/util/src/main/i18n/translations/match_lol_US.properties
@@ -92,6 +92,7 @@ match.stats.damage.dealt = DMG maekd (Bowz)\: {0} ({1})
 
 # {0} = an amount of damage
 # {1} = an amount of damage
+match.stats.damage.received = damg recievd (bow)\: {0} ({1})
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
@@ -152,6 +153,7 @@ match.timeLimit.result = {1} aftwer {0}
 # {1} = some criteria to win the match
 match.timeLimit.commandOutput = Tiem limit''z naw {0} wid result {1}
 
+match.error.noMatch = no macth runnin now\!
 
 broadcast.go = Meow\!
 
