Update French translations

--- a/util/src/main/i18n/translations/misc_fr_FR.properties
+++ b/util/src/main/i18n/translations/misc_fr_FR.properties
@@ -132,6 +132,12 @@ misc.to = À
 
 misc.from = De
 
+misc.all = Tous
+
+misc.none = Aucun
+
+misc.friends = Amis
+
 misc.nextPage = Page suivante
 
 misc.previousPage = Page précédente
@@ -259,6 +265,10 @@ type.component = texte
 type.uri = lien
 
 type.team = équipe
+
+type.playerclass = classe
+
+type.mode = mode
 
 type.settingkey = réglage
 
