Update Catalan translations

--- a/util/src/main/i18n/translations/misc_ca_ES.properties
+++ b/util/src/main/i18n/translations/misc_ca_ES.properties
@@ -43,20 +43,28 @@ misc.day = {0} dia
 misc.days = {0} dies
 
 # {0} = "1"
+misc.week = {0} setmana
 
 # {0} = number of weeks (2-3)
+misc.weeks = {0} setmanes
 
 # {0} = "1"
+misc.month = {0} mes
 
 # {0} = number of months (2-11)
+misc.months = {0} mesos
 
 # {0} = "1"
+misc.year = {0} any
 
 # {0} = number of years
+misc.years = {0} anys
 
 # less than a second
+misc.now = un moment
 
 # more than 3 years
+misc.eon = fa temps
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = fa {0}
@@ -64,15 +72,19 @@ misc.timeAgo = fa {0}
 # {0} = duration (e.g. "1:00" for 1 minute left, "15:25" for 15 minutes and 25 seconds left)
 misc.timeRemaining = Temps restant\: {0}
 
+misc.overtime = Temps extra {0}
 
 # {0} = player name
 misc.createdBy = Creat per {0}
 
 # {0} = player name
+misc.by = per {0}
 
 # {0} = player name
+misc.and = i {0}
 
 # {0} = some map or gamemode name
+misc.playing = Jugant {0}
 
 # {0} = something made by {1} (e.g. a map name)
 # {1} = player name
@@ -89,6 +101,7 @@ misc.point = {0} punt
 misc.points = {0} punts
 
 # {0} = "1"
+misc.life = {0} vides
 
 # {0} = number of lives
 misc.lives = {0} vides
@@ -102,8 +115,10 @@ misc.team = Equip
 # A choice with two options (e.g. 1 hour or 5 matches)
 # {0} = the first option
 # {1} = the second option
+misc.or = {0} o {1}
 
 # do not translate, keep as-is
+misc.snowman = ☃
 
 misc.unknown = Desconegut
 
@@ -113,9 +128,16 @@ misc.on = Engegat
 
 misc.off = Apagat
 
+misc.to = A
+
+misc.from = De
 
 
 
+
+misc.nextPage = Pàgina següent
+
+misc.previousPage = Pàgina anterior
 
 misc.thankYou = Gràcies.
 
@@ -127,37 +149,68 @@ misc.alert = Alerta
 
 misc.warning = ADVERTÈNCIA
 
+misc.top = Adalt
 
+misc.bottom = Abaix
 
+misc.front = Davant
 
+misc.back = Darrere
 
+misc.rear = Enrere
 
+misc.left = Esquerra
 
+misc.right = Dreta
 
+misc.center = Centre
 
+misc.mid = Mig
 
+misc.middle = Mig
 
+misc.north = Nord
 
+misc.south = Sud
 
+misc.east = Est
 
+misc.west = Oest
 
+misc.white = Blanc
 
+misc.orange = Taronja
 
+misc.magenta = Magenta
 
+misc.lightBlue = Blau cel
 
+misc.yellow = Groc
 
+misc.lime = Verd clar
 
+misc.pink = Rosa
 
+misc.gray = Gris
 
+misc.lightGray = Gris clar
 
+misc.cyan = Cian
 
+misc.purple = Lila
 
+misc.blue = Blau
 
+misc.brown = Marró
 
+misc.green = Verd
 
+misc.red = Vermell
 
+misc.black = Negre
 
 # Pertains to color (e.g. "Light Blue" or "Light Gray")
+misc.light = Clar
 
 # {0} = player name
 misc.teleportTo = Teletransportar-te a {0}
@@ -170,33 +223,57 @@ misc.editWand = Vareta d'edició
 misc.join = {0} s''ha unit al servidor
 
 # {0} = player name
+misc.join.quiet = {0} s''ha unit a la partida de forma silenciosa
 
 # {0} = player name
 misc.leave = {0} ha sortit del servidor
 
 # {0} = player name
+misc.leave.quiet = {0} ha marxat de la partida de forma silenciosa
 
 misc.incorrectWorld = Uh oh\! Hi ha hagut un error. Si us plau, prova un altre cop d'unir-te.
 
+misc.serverFull = El servidor està ple, considereu comprar un rang Premium per poder-vos unir quan estigui ple\!
 
 misc.serverRestart = Servidor reiniciant-se\!
 
+misc.creative = Creatiu
 
+misc.spectator = Espectador
 
+type.int = nombre enter
 
+type.float = nombre decimal
 
+type.boolean = verdader o fals
 
+type.duration = duració
 
+type.vector = (x,y,z) vector
 
+type.chunk = (x,z) vector
 
+type.version = (x.y.z) versió
 
 type.gamemode = mode de joc
 
+type.component = text
 
+type.uri = url
 
+type.team = equip
 
+type.playerclass = classe
 
+type.mode = mode
 
+type.settingkey = configuració
 
+type.uuid = uuid
+
+type.localdate = (aaaa-mm-dd) data
+
+type.phase = fase
 
 # {0} = a URL (e.g. "https://oc.tc")
+chat.clickLink = Més informació a {0}
