Update German translations

--- a/util/src/main/i18n/translations/misc_de_DE.properties
+++ b/util/src/main/i18n/translations/misc_de_DE.properties
@@ -132,6 +132,9 @@ misc.to = An
 
 misc.from = Von
 
+
+
+
 misc.nextPage = Nächste Seite
 
 misc.previousPage = Vorherige Seite
@@ -144,7 +147,7 @@ misc.tip = Tipp
 
 misc.alert = Hinweis
 
-misc.warning = WARNUNG
+misc.warning = VERWARNUNG
 
 misc.top = Oberseite
 
@@ -259,6 +262,10 @@ type.component = Text
 type.uri = URL
 
 type.team = Team
+
+type.playerclass = Klasse
+
+type.mode = Modus
 
 type.settingkey = Einstellung
 
