Update Italian translations

--- a/util/src/main/i18n/translations/misc_it_IT.properties
+++ b/util/src/main/i18n/translations/misc_it_IT.properties
@@ -132,6 +132,9 @@ misc.to = A
 
 misc.from = Da
 
+
+
+
 misc.nextPage = Pagina successiva
 
 misc.previousPage = Pagina precedente
@@ -164,6 +167,7 @@ misc.center = Centro
 
 misc.mid = Medio
 
+misc.middle = Centro
 
 misc.north = Nord
 
@@ -173,23 +177,40 @@ misc.east = Est
 
 misc.west = Ovest
 
+misc.white = Bianco
 
+misc.orange = Arancione
 
+misc.magenta = Magenta
 
+misc.lightBlue = Blu Chiaro
 
+misc.yellow = Giallo
 
+misc.lime = Lime
 
+misc.pink = Rosa
 
+misc.gray = Grigio
 
+misc.lightGray = Grigio Chiaro
 
+misc.cyan = Ciano
 
+misc.purple = Viola
 
+misc.blue = Blu
 
+misc.brown = Marrone
 
+misc.green = Verde
 
+misc.red = Rosso
 
+misc.black = Nero
 
 # Pertains to color (e.g. "Light Blue" or "Light Gray")
+misc.light = Chiaro
 
 # {0} = player name
 misc.teleportTo = Teletrasporto verso {0}
@@ -216,7 +237,9 @@ misc.serverFull = Il server è pieno, considera l'aggiornamento a premium per es
 
 misc.serverRestart = Il server si sta riavviando\!
 
+misc.creative = Creativa
 
+misc.spectator = Spettatore
 
 type.int = numero intero
 
@@ -239,6 +262,10 @@ type.component = testo
 type.uri = url
 
 type.team = squadra
+
+type.playerclass = classe
+
+type.mode = modalità
 
 type.settingkey = impostazione
 
