Update Russian translations

--- a/util/src/main/i18n/translations/misc_ru_RU.properties
+++ b/util/src/main/i18n/translations/misc_ru_RU.properties
@@ -132,6 +132,12 @@ misc.to = Кому
 
 misc.from = От
 
+misc.all = Все
+
+misc.none = Откл.
+
+misc.friends = Друзья
+
 misc.nextPage = След. страница
 
 misc.previousPage = Пред. страница
@@ -259,6 +265,10 @@ type.component = текст
 type.uri = url
 
 type.team = команда
+
+type.playerclass = класс
+
+type.mode = режим
 
 type.settingkey = настройка
 
