Update Spanish, Mexico translations

--- a/util/src/main/i18n/translations/misc_es_MX.properties
+++ b/util/src/main/i18n/translations/misc_es_MX.properties
@@ -132,6 +132,9 @@ misc.to = Para
 
 misc.from = De
 
+
+
+
 misc.nextPage = Siguiente página
 
 misc.previousPage = Página anterior
@@ -164,6 +167,7 @@ misc.center = Centro
 
 misc.mid = Mid
 
+misc.middle = Medio
 
 misc.north = Norte
 
@@ -173,23 +177,40 @@ misc.east = Este
 
 misc.west = Oeste
 
+misc.white = Blanco
 
+misc.orange = Naranja
 
+misc.magenta = Magenta
 
+misc.lightBlue = Azul claro
 
+misc.yellow = Amarillo
 
+misc.lime = Lima
 
+misc.pink = Rosa
 
+misc.gray = Gris
 
+misc.lightGray = Gris claro
 
+misc.cyan = Cian
 
+misc.purple = Morado
 
+misc.blue = Azul
 
+misc.brown = Marrón
 
+misc.green = Verde
 
+misc.red = Rojo
 
+misc.black = Negro
 
 # Pertains to color (e.g. "Light Blue" or "Light Gray")
+misc.light = Claro
 
 # {0} = player name
 misc.teleportTo = Teletransportarse a {0}
@@ -216,7 +237,9 @@ misc.serverFull = El servidor está lleno. ¡Considera mejorar a premium para po
 
 misc.serverRestart = ¡Reiniciando servidor\!
 
+misc.creative = Creativo
 
+misc.spectator = Espectador
 
 type.int = número entero
 
@@ -239,6 +262,8 @@ type.component = texto
 type.uri = url
 
 type.team = equipo
+
+
 
 type.settingkey = ajuste
 
