Update LOLCAT translations

--- a/util/src/main/i18n/translations/misc_lol_US.properties
+++ b/util/src/main/i18n/translations/misc_lol_US.properties
@@ -132,6 +132,9 @@ misc.to = TO
 
 misc.from = Frawm
 
+
+
+
 misc.nextPage = Nxt paeg
 
 misc.previousPage = Last paeg
@@ -164,6 +167,7 @@ misc.center = Centerrr
 
 misc.mid = centah
 
+misc.middle = da midle
 
 misc.north = Nowrth
 
@@ -173,23 +177,40 @@ misc.east = Eeest
 
 misc.west = Wuest
 
+misc.white = Wite
 
+misc.orange = Oranz
 
+misc.magenta = Magentar
 
+misc.lightBlue = Lit Bloo
 
+misc.yellow = Yelo
 
+misc.lime = Limeh
 
+misc.pink = Pinky
 
+misc.gray = Grayly
 
+misc.lightGray = Lit Grayly
 
+misc.cyan = Cyanled
 
+misc.purple = Purply
 
+misc.blue = Blu
 
+misc.brown = Brownish
 
+misc.green = Greenish
 
+misc.red = Redish
 
+misc.black = Blak
 
 # Pertains to color (e.g. "Light Blue" or "Light Gray")
+misc.light = Lite
 
 # {0} = player name
 misc.teleportTo = Muv 2 {0}''s paw
@@ -216,7 +237,9 @@ misc.serverFull = Server iz FULL ov kittehs\! get a premium kitteh rank to join 
 
 misc.serverRestart = be bak latr\!
 
+misc.creative = HAX
 
+misc.spectator = Spector moed
 
 type.int = whol numbr
 
@@ -239,6 +262,8 @@ type.component = txt
 type.uri = Uniform Resource Locator
 
 type.team = taem
+
+
 
 type.settingkey = setin
 
