Update French translations

--- a/util/src/main/i18n/translations/moderation_fr_FR.properties
+++ b/util/src/main/i18n/translations/moderation_fr_FR.properties
@@ -5,14 +5,18 @@ moderation.type = Type \: {0}
 
 moderation.type.kick = Expulsé
 
-moderation.type.mute = Rendu muet
+moderation.type.mute = {0} muet
 
 moderation.type.warn = Averti
 
 moderation.type.ban = Ban permanent
 
+moderation.type.name_ban = Bannir le nom d'utilisateur
+
 # {0} = duration of the ban (e.g. "7 days")
 moderation.type.temp_ban = ban de {0}
+
+# {0} = duration of the mute (e.g. "1 hour")
 
 # {0} = number of online staff
 # {1} = list of staff names (e.g. "Bob, Alice, and Jerry")
@@ -28,6 +32,9 @@ moderation.screen.ban = Vous avez été banni définitivement pour {0}
 # {0} = punishment reason
 moderation.screen.temp_ban = Vous avez été temporairement banni pour {0}
 
+# {0} = banned username (e.g "OFFENSIVE_NaMe")
+moderation.screen.name_ban = Vous avez été banni en raison de votre nom d''utilisateur {0}
+
 # {0} = a http link (e.g. "https://example.com/rules")
 moderation.screen.rulesLink = Veuillez consulter nos règles sur {0}
 
@@ -38,11 +45,13 @@ moderation.screen.signoff = Émis par {0}
 moderation.screen.expires = Expire dans {0}
 
 # {0} = mute reason
-moderation.mute.message = Vous avez été rendu muet et ne pouvez pas envoyer de messages dans le chat
+moderation.mute.message = Vous ne pouvez pas discuter en étant muet \: {0}
 
 moderation.mute.list = Joueurs muets
 
 moderation.mute.none = Il n'y a pas de joueurs muets en ligne \!
+
+moderation.mute.noReason = Aucune raison fournie
 
 # {0} = player name
 moderation.mute.hover = Cliquez pour rendre la parole à {0}
@@ -71,7 +80,7 @@ moderation.reports.hover = Signalé par {0}
 moderation.alts.header = Comptes Alternatifs
 
 # {0} = player name
-moderation.alts.noAlts = {0} n''a pas de comptes alternatifs en ligne.
+moderation.alts.noAlts = {0} n''a pas de compte alternatif connu.
 
 # {0} = ip address (e.g. "1.2.3.4")
 moderation.ipBan.invalidIP = {0} n''est pas une adresse IP valide
@@ -87,6 +96,8 @@ moderation.ipBan.bannedWithAlts = {0} a été banni ainsi que {1} comptes altern
 moderation.records.lookupNone = {0} n''a pas de casier judiciaire
 
 moderation.records.header = Casier Judiciaire
+
+moderation.records.history = Historique des punitions
 
 # {0} = punishment reason (e.g. "Hacking is not allowed")
 moderation.records.reason = Raison \: {0}
