Update German translations

--- a/util/src/main/i18n/translations/moderation_de_DE.properties
+++ b/util/src/main/i18n/translations/moderation_de_DE.properties
@@ -5,14 +5,16 @@ moderation.type = Art\: {0}
 
 moderation.type.kick = Gekickt
 
-moderation.type.mute = Stummgeschaltet
 
 moderation.type.warn = Verwarnt
 
 moderation.type.ban = Permanenter Bann
 
+
 # {0} = duration of the ban (e.g. "7 days")
 moderation.type.temp_ban = {0}-Bann
+
+# {0} = duration of the mute (e.g. "1 hour")
 
 # {0} = number of online staff
 # {1} = list of staff names (e.g. "Bob, Alice, and Jerry")
@@ -28,6 +30,8 @@ moderation.screen.ban = Du wurdest permanent gebannt wegen {0}
 # {0} = punishment reason
 moderation.screen.temp_ban = Du wurdest temporär gebannt wegen {0}
 
+# {0} = banned username (e.g "OFFENSIVE_NaMe")
+
 # {0} = a http link (e.g. "https://example.com/rules")
 moderation.screen.rulesLink = Bitte lies unsere Regeln nach unter {0}
 
@@ -38,11 +42,11 @@ moderation.screen.signoff = Auferlegt von {0}
 moderation.screen.expires = Läuft ab in {0}
 
 # {0} = mute reason
-moderation.mute.message = Du wurdest stummgeschaltet wegen {0}
 
 moderation.mute.list = Stummgeschaltete Spieler
 
 moderation.mute.none = Keine stummgeschalteten Spieler sind online\!
+
 
 # {0} = player name
 moderation.mute.hover = Klick, um die Stummschaltung von {0} aufzuheben
@@ -71,7 +75,6 @@ moderation.reports.hover = Gemeldet von {0}
 moderation.alts.header = Zweit-Accounts
 
 # {0} = player name
-moderation.alts.noAlts = {0} hat keine Zweit-Accounts online.
 
 # {0} = ip address (e.g. "1.2.3.4")
 moderation.ipBan.invalidIP = {0} ist keine gültige IP-Adresse
@@ -87,6 +90,7 @@ moderation.ipBan.bannedWithAlts = {0} wurde IP-gebannt mitsamt {1} Zweit-Account
 moderation.records.lookupNone = {0} hat keine Bestrafungen
 
 moderation.records.header = Bestrafungen
+
 
 # {0} = punishment reason (e.g. "Hacking is not allowed")
 moderation.records.reason = Grund\: {0}
