Update Catalan translations

--- a/util/src/main/i18n/translations/ui_ca_ES.properties
+++ b/util/src/main/i18n/translations/ui_ca_ES.properties
@@ -45,52 +45,95 @@ setting.observersOnly = Ho sentim, aquesta comanda es només per observadors.
 
 # {0} = name of a setting (e.g. "chat", "sounds", "picker")
 # {1} = current setting value (e.g. "on", "off")
+setting.get = La vostra configuració {0} ha canviat a {1}
 
 # {0} = list of setting values (e.g "on, off")
+setting.options = Possibles opcions\: {0}
 
 # {0} = name of a setting
 # {1} = old setting value (e.g. "off")
 # {2} = new setting value (e.g. "on")
+setting.set = Heu canviat la vostra configuració {0} de {1} a {2}
 
+settings.menu.title = Configuració
 
+settings.menu.lore = Clica per obrir el menú de configuració
 
+settings.menu.toggle = Clica per canviar
 
+settings.chat = Canvia el teu canal per defecte de xat
 
+settings.chat.team = El xat només s'envia a membres del teu equip
 
+settings.chat.global = El xat s'envia a tothom
 
+settings.chat.admin = Reservat per l'staff
 
+settings.death = Canvia quins missatges de mort surten
 
+settings.death.all = Mostrar tots els missatges de mort
 
+settings.death.own = Veure només els missatges propis sobre morts
 
+settings.picker = Canvia quan es mostra el selector
 
+settings.picker.auto = Mostra automàticament el selector en funció de la partida
 
+settings.picker.on = Mostra sempre el selector
 
+settings.picker.off = Mai mostra el selector
 
+settings.join = Canvia quan s'envien els missatges d'unió
 
+settings.join.on = Mostrar tots els missatges d'unió
 
+settings.join.off = Amaga tots els missatges d'unió
 
+settings.message = Canvia si s’accepten missatges privats
 
+settings.message.on = Accepta tots els missatges privats
 
+settings.message.off = Denega tots els missatges privats
 
+settings.observers = Canvia si els observadors són visibles
 
+settings.observers.on = Mostrar tots els observadors
 
+settings.observers.off = Amaga tots els observadors
 
+settings.sounds = Canvia quan es reprodueixen sons
 
+settings.sounds.all = Escoltar tots els sons del partit
 
+settings.sounds.dm = Escoltar només els sons dels missatges privats
 
+settings.sounds.none = Silencia tots els sons de la partida
 
+settings.vote = Canvia si el llibre de vot es mostra mentre es canvia de mapa
 
+settings.vote.on = Mostra sempre el llibre de vot
 
+settings.vote.off = Mai mostreu el llibre de vot
 
+settings.stats = Canvia si es fan un seguiment de les estadístiques
 
+settings.stats.on = Fer un seguiment i mostra les estadístiques per partida
 
+settings.stats.off = Desactiva i amaga les estadístiques per partida
 
+settings.effects = Canvia si es mostren els efectes de partícules
 
+settings.effects.on = Veure efectes especials de partícules 
 
+settings.effects.off = Amaga efectes especials de partícules
 
+settings.time = Els canvis preferentment amb l’hora del món
 
+settings.time.auto = Mantenir el temps sincronitzat amb el servidor
 
+settings.time.dark = Sempre de nit
 
+settings.time.light = Sempre de dia
 
 preview.noPotionEffects = Cap efecte de poció
 
@@ -119,6 +162,7 @@ preview.walkSpeed = Velocitat caminant ({0}x)
 
 preview.closeButton = Tancar
 
+picker.title.teamClass = Selecció d'equips i classes
 
 picker.title.team = Selecció d'equip
 
@@ -150,16 +194,28 @@ picker.clickToRejoin = Clic per tornar a unir-te al teu equip\!
 
 picker.noPermissions = Els usuaris premiums poden triar el seu equip\!
 
+menu.page.empty = No s'han trobat resultats\!
 
+menu.page.next = Pàgina següent
 
+menu.page.previous = Pàgina anterior
 
 # {0} = name of previous menu
+menu.page.return = Torna a {0}
 
+shop.currency.insufficient = No tens prou materials per comprar aquest article
 
+shop.purchase.overflow = La compra no hi cap al vostre inventari, de manera que s'ha deixat als vostres peus
 
+shop.lore.cost = Cost
 
+shop.lore.free = Gratuït
 
+shop.lore.purchase = Cliqueu per comprar-ho
 
+shop.lore.insufficient = Materials insuficients
 
+shop.item.empty = No hi ha articles a la venda en aquest moment
 
+shop.category.empty = Aquesta botiga no té articles a la venda en aquest moment
 
