Update German translations

--- a/util/src/main/i18n/translations/ui_de_DE.properties
+++ b/util/src/main/i18n/translations/ui_de_DE.properties
@@ -135,21 +135,21 @@ settings.time.dark = Immer Nachtzeit
 
 settings.time.light = Immer Tageszeit
 
-preview.noPotionEffects = Keine Trankeffekte
+preview.noPotionEffects = Keine Trank-Effekte
 
 preview.notViewable = Das Inventar des Spielers ist derzeit nicht einsehbar
 
-preview.potionEffects = Trankeffekte
+preview.potionEffects = Trank-Effekte
 
-preview.hungerLevel = Hungerstatus
+preview.hungerLevel = Hunger-Status
 
-preview.healthLevel = Gesundheitsstatus
+preview.healthLevel = Gesundheits-Status
 
 preview.specialAbilities = Besondere Fähigkeiten
 
 preview.flying = Fliegen
 
-preview.doubleJump = Doppelsprung
+preview.doubleJump = Doppel-Sprung
 
 # {0} = amount of knockback resistance (number)
 preview.knockbackResistance = Rückstoß-Widerstand ({0}%)
@@ -203,11 +203,19 @@ menu.page.previous = Vorherige Seite
 # {0} = name of previous menu
 menu.page.return = Zurückkehren zu {0}
 
+shop.currency.insufficient = Du hast nicht genügend Rohstoffe, um diesen Gegenstand zu kaufen
 
+shop.purchase.overflow = Der Einkauf passte nicht in dein Inventar, daher liegt er auf dem Boden
 
+shop.lore.cost = Preis
 
+shop.lore.free = Kostenlos
 
+shop.lore.purchase = Klick, um zu kaufen
 
+shop.lore.insufficient = Nicht genügend Rohstoffe
 
+shop.item.empty = Momentan stehen keine Gegenstände zum Verkauf
 
+shop.category.empty = Dieser Shop bietet momentan keine Gegenstände zum Verkauf an
 
