Update Italian translations

--- a/util/src/main/i18n/translations/ui_it_IT.properties
+++ b/util/src/main/i18n/translations/ui_it_IT.properties
@@ -55,45 +55,85 @@ setting.options = Possibili opzioni\: {0}
 # {2} = new setting value (e.g. "on")
 setting.set = Cambiato il tuo {0} impostazione da {1} a {2}
 
+settings.menu.title = Impostazioni
 
+settings.menu.lore = Clicca per aprire il menu impostazioni
 
+settings.menu.toggle = Clicca per attivare
 
+settings.chat = Modifica il canale di chat predefinito
 
+settings.chat.team = La chat invia messaggi solo al tuo team
 
+settings.chat.global = La chat è inviata a tutti
 
+settings.chat.admin = Riservato allo staff
 
+settings.death = Cambia il tipo di messaggi di morte
 
+settings.death.all = Mostra tutti i messaggi
 
+settings.death.own = Visualizza solo i propri messaggi di morte
 
+settings.picker = Cambia quando il selettore viene visualizzato
 
+settings.picker.auto = Mostra automaticamente il selettore in base alla corrispondenza
 
+settings.picker.on = Visualizza sempre il selettore
 
+settings.picker.off = Non mostrare mai il selettore
 
+settings.join = Modifiche quando i messaggi di entrata vengono inviati
 
+settings.join.on = Visualizza tutti i messaggi di unione
 
+settings.join.off = Nascondi tutti i messaggi di unione
 
+settings.message = Modifica se i messaggi privati sono accettati
 
+settings.message.on = Accetta tutti i messaggi privati
 
+settings.message.off = Rifiuta tutti i messaggi privati
 
+settings.observers = Modifica se gli osservatori sono visibili
 
+settings.observers.on = Mostra tutti gli osservatori
 
+settings.observers.off = Nascondi altri osservatori
 
+settings.sounds = Cambia quando i suoni vengono riprodotti
 
+settings.sounds.all = Ascolta tutti i suoni della partita
 
+settings.sounds.dm = Senti solo suoni dai messaggi diretti
 
+settings.sounds.none = Silenzia tutti i suoni della partita
 
+settings.vote = Cambia se il libro delle votazioni è mostrato durante il ciclo d'attesa
 
+settings.vote.on = Mostra sempre il libro delle votazioni
 
+settings.vote.off = Non mostrare mai il libro delle votazioni
 
+settings.stats = Modifica se le statistiche sono tracciate
 
+settings.stats.on = Traccia e visualizza le statistiche per corrispondenza
 
+settings.stats.off = Disabilita e nascondi le statistiche per corrispondenza
 
+settings.effects = Modifica se sono mostrati effetti di particelle
 
+settings.effects.on = Visualizza effetti speciali di particelle
 
+settings.effects.off = Nascondi effetti speciali di particelle
 
+settings.time = Cambia ora preferita del mondo
 
+settings.time.auto = Mantieni il tempo in sincronizzazione con il server
 
+settings.time.dark = Sempre notte
 
+settings.time.light = Sempre ora del giorno
 
 preview.noPotionEffects = Non ci sono efetti di pozioni
 
@@ -154,16 +194,28 @@ picker.clickToRejoin = Clicca per riunirti alla tua squadra\!
 
 picker.noPermissions = I giocatori premium possono scegliere la loro squadra\!
 
+menu.page.empty = Nessun risultato trovato\!
 
+menu.page.next = Pagina Successiva
 
+menu.page.previous = Pagina Precedente
 
 # {0} = name of previous menu
+menu.page.return = Ritorna a {0}
 
+shop.currency.insufficient = Non hai abbastanza materiali per acquistare questo oggetto
 
+shop.purchase.overflow = L'acquisto non ci stava nel tuo inventario, quindi è stato buttato ai tuoi piedi
 
+shop.lore.cost = Prezzo
 
+shop.lore.free = Gratis
 
+shop.lore.purchase = Clicca per acquistare
 
+shop.lore.insufficient = Materiali insufficienti
 
+shop.item.empty = Non ci sono oggetti in vendita al momento
 
+shop.category.empty = Questo negozio non ha articoli in vendita al momento
 
